# middleware/auth.js
@@ -1,0 +1,13 @@
+const jwt = require('jsonwebtoken');
+
+module.exports = (req, res, next) => {
+  try {
+    const token = req.headers.authorization.split(' ')[1];
+
+    jwt.verify(token, process.env.JWT_KEY);
+
+    next();
+  } catch {
+    res.status(401).send();
+  }
+};
